# MapReduce

./: .gitignore  CMakeLists.txt  GeneralContext.cpp  GeneralContext.h  Makefile  MapReduceFramework.cpp  README  README.md  SampleTest  WordTest  errors.h  ex2.tar  ex3.tar
.github/workflows/: ci.yml
Atomic/: atomicdemo  atomicdemo.cpp  atomicdemo_multivar
Barrier/: barrierdemo
Sample Client/: SampleClient
Sample_Client/: WordCountClient.cpp
benchmarks/: results_baseline.csv  results_map_tree.csv  run_sweep.sh  throughput_bench.cpp
docs/: ARCHITECTURE.md  PERFORMANCE.md
examples/: README.md  sample.txt
examples/char_frequency/: main.cpp
examples/word_count/: main.cpp
include/mapreduce/: MapReduceClient.h  MapReduceFramework.h  errors.h
src/: Barrier.cpp  Barrier.h  JobContext.cpp  MapReduceFramework.cpp
src/internal/: JobFramework.h  Phases.cpp  Phases.h  ShuffleTypes.h  State.h
tests/: barrier_test.cpp  concurrent_jobs_test.cpp  correctness_count_test.cpp  empty_input_test.cpp  golden_regression_test.cpp  job_lifecycle_test.cpp  multi_thread_test.cpp  progress_test.cpp  test1  test1-1_thread_1_process.cpp  test4  test4-1_thread_4_process.txt  test_helpers.cpp  test_helpers.h
